--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,11 +1,11 @@
 
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="jumbotron">
-			  <h1>Build successful!</h1>
-			  <p>You can start developing your awesome app!</p>
-			  <p><a class="btn btn-primary btn-lg" href="https://github.com/Raulios/angular-es6-boilerplate" role="button" target="_blank">See boilerplate on Github</a></p>
+			  <h1>Hello, world!</h1>
+			  <p>...</p>
+			  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 			</div>
 		</div>
 	</div>
