--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   	<!-- inject:css -->
   	<link rel="stylesheet" href="app/assets/vendor/bootstrap.css">
   	<link rel="stylesheet" href="app/assets/css/custom.css">
