--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,12 +1,10 @@
 
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-xs-12">
-			<div class="jumbotron">
-			  <h1>Hello, world!</h1>
-			  <p>...</p>
-			  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+<section>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12">
+				<input type="text" class="form-control search-input" placeholder="Search...">
 			</div>
 		</div>
 	</div>
-</div>
+</section>
