--- a/app/home/home.html
+++ b/app/home/home.html
@@ -6,5 +6,43 @@
 				<input type="text" class="form-control search-input" placeholder="Search...">
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<table class="table">
+					<thead>
+						<tr>
+							<th>
+								Instrument
+							</th>
+							<th>
+								Genre
+							</th>
+							<th>
+								City
+							</th>
+							<th>
+								Country
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="ad in $ctrl.advertisements">
+							<td>
+								{{ ad.instrument }}
+							</td>
+							<td>
+								{{ ad.genre }}
+							</td>
+							<td>
+								{{ ad.city }}
+							</td>
+							<td>
+								{{ ad.country }}
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 	</div>
 </section>
