fully implemented add new ad with modal window

--- a/app/graphs/graphs.html
+++ b/app/graphs/graphs.html
@@ -1,11 +1,11 @@
 <section>
 	<div class="container-fluid">
-		<h1 class="page-header">Advertisement count</h1>
+		<h1 class="page-header"><i class="fa fa-bar-chart" aria-hidden="true"></i> Charts & Graphs</h1>
 		<div class="row">
 			<div class="col-md-4">
 				<div class="panel panel-default">
 			  		<div class="panel-heading">
-				    	<h3 class="panel-title">By Instrument</h3>
+				    	<h3 class="panel-title">Count by Instrument</h3>
 				  	</div>
 				  	<div class="panel-body">
 						<canvas id="doughnut" class="chart chart-doughnut"
@@ -17,7 +17,7 @@
 			<div class="col-md-4">
 				<div class="panel panel-default">
 			  		<div class="panel-heading">
-				    	<h3 class="panel-title">By Genre</h3>
+				    	<h3 class="panel-title">Count by Genre</h3>
 				  	</div>
 				  	<div class="panel-body">
 						<canvas id="doughnut2" class="chart chart-doughnut"
@@ -29,7 +29,7 @@
 			<div class="col-md-4">
 				<div class="panel panel-default">
 			  		<div class="panel-heading">
-				    	<h3 class="panel-title">By City</h3>
+				    	<h3 class="panel-title">Count by City</h3>
 				  	</div>
 				  	<div class="panel-body">
 						<canvas id="doughnut3" class="chart chart-doughnut"
